# lobster-town

./: .gitignore  LICENSE  README.md
connector/: README.md  pyproject.toml
connector/lobster_town/: __init__.py  act.py  behavior_loop.py  cli.py  deepseek_adapter.py  identity.py  openclaw_adapter.py  perception.py  skill_prompt.py  thought_display.py  ui.py
docs/: adventurer-handbook.md  beta-invite.md  install.md  openclaw-self-onboard.md  persona-guide.md
openclaw-skill/lobster-town/: SKILL.md  prompt-template.txt
